[package]
name = "axon-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "AXON LLM 智能体：ReAct 推理 + Tool Calling + 上下文管理（Phase 3 P0 阶段填充）"

[features]
default = []
# PyO3 绑定(默认禁用,启用需 python toolchain)。
# 注意:python 隐含依赖 backends,因为 OpenAICompatBackend 是 LLMBackend 的唯一实现。
python = ["dep:pyo3", "backends"]
# 启用 axon-explain 集成(异步记录 + 工具查询)
explain = ["dep:axon-explain"]
# 启用真实 LLM backend(DeepSeek / OpenAI / 本地推理服务)
# 依赖:tokio-stream(流式)/ async-stream(stream 宏)/ sha2(fixture key)/ hex / rand(jitter)
backends = [
    "dep:tokio-stream",
    "dep:async-stream",
    "dep:sha2",
    "dep:hex",
    "dep:rand",
    "dep:reqwest",
    "dep:bytes",
    "dep:futures-core",
    "tokio/rt-multi-thread",
    "tokio/macros",
    "tokio/time",
]
# e2e 测试支持(wiremock mock HTTP)
e2e = ["backends", "dep:wiremock"]
# demo bin(deepseek 真实调用 + 真实工具) + ensemble 集成(多 backend 投票)
demo = ["backends", "dep:axon-ensemble", "dep:axon-explain"]
# 交易后端适配器:把 axon-exchange 适配为 TradingBackend
# 默认禁用,使用方按需启用 `cargo build -p axon-llm --features trading-exchange`。
# 启用时拉入 axon-exchange(其依赖 hmac/sha2/tokio-tungstenite 等)+ wiremock 集成测试
# + rust_decimal(axon-exchange 传递依赖,但 lib 显式用 f64 <-> Decimal 转换需直接访问)。
trading-exchange = ["dep:axon-exchange", "dep:wiremock", "dep:rust_decimal"]
# 交易后端适配器:把 axon-oms 适配为 TradingBackend
# 默认禁用,使用方按需启用 `cargo build -p axon-llm --features trading-oms`。
# 启用时拉入 axon-oms(其依赖 rust_decimal / parking_lot / uuid / chrono)+ lib 显式用
# rust_decimal 做 f64 <-> Decimal 转换(同 trading-exchange)。
trading-oms = ["dep:axon-oms", "dep:rust_decimal"]
# 交易后端适配器:把 axon-backtest::L1MatchingEngine 适配为 TradingBackend
# 默认禁用,使用方按需启用 `cargo build -p axon-llm --features trading-backtest`。
# 启用时拉入 axon-backtest(其依赖 axon-core / crossbeam-channel / rust_decimal 等)+ lib 直接
# 访问 L1MatchingEngine / MatchFill / MatchingEngine trait。
trading-backtest = ["dep:axon-backtest", "dep:axon-core"]
# meta feature:启用所有 trading-* 适配器。CI 默认跑这个组合,使用方按需单选。
# Stage A (Exchange) + Stage B (OMS) + Stage C (Backtest) 已交付。
trading-all = ["trading-exchange", "trading-oms", "trading-backtest"]
# Stage J:axon-risk 桥接适配器(包装 `axon_risk::circuit_breaker::CircuitBreaker`
# 为 `RiskGate`)。默认禁用,使用方按需启用
# `cargo build -p axon-llm --features trading-risk-extra`。
# 启用时拉入 axon-risk(轻量级,无重传递依赖)。
# 核心 lib 内的 `RejectionCircuitBreaker` 不依赖此 feature(零新增依赖)。
trading-risk-extra = ["dep:axon-risk"]

[dependencies]
# 序列化
serde = { workspace = true }
serde_json = { workspace = true }
# 错误
thiserror = { workspace = true }
# 日志
tracing = { workspace = true }
# 异步
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros", "rt-multi-thread", "time"] }
# 时间戳(用于消息时间)
chrono = { workspace = true }
# UUID(explain 集成使用)
uuid = { workspace = true }
# 互斥锁(swarm Python 绑定使用)
parking_lot = "0.12"

# Python 绑定
# `extension-module` 启用时禁止 Rust 自带 main(避免重复初始化);
# 本 crate 既有 cdylib(供 Python 加载)又有 rlib(供 Rust crate 引用),
# **不**在 pyo3 自身开 `extension-module`,改在 `python` feature 显式开
# `auto-initialize`(让 `cargo test --features python` 自动初始化 Python
# 解释器,无需 Python 进程加载)。
pyo3 = { version = "0.28", features = ["auto-initialize"], optional = true }

# 可解释性集成(feature-gated)
axon-explain = { workspace = true, optional = true }

# 模型集成(feature-gated,demo 需要)
axon-ensemble = { workspace = true, optional = true }

# LLM backend 可选依赖
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"], optional = true }
tokio-stream = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
# 测试 / e2e 依赖
wiremock = { version = "0.6", optional = true }
# demo bin 依赖
toml = { version = "0.8" }
# bytes 类型(reqwest 间接依赖,但 stream_complete 类型签名需要直接用)
bytes = { version = "1", optional = true }
# Stream trait
futures-core = { version = "0.3", optional = true }

# 真实交易所适配(默认禁用,trading-exchange feature 启用时激活)
# 引入后传递依赖 hmac / sha2 / hex / tokio-tungstenite / rust_decimal。
axon-exchange = { workspace = true, optional = true }
# OMS 适配(默认禁用,trading-oms feature 启用时激活)
# 引入后传递依赖 rust_decimal / parking_lot / uuid / chrono。
axon-oms = { workspace = true, optional = true }
# 回测撮合引擎适配(默认禁用,trading-backtest feature 启用时激活)
# 引入后传递依赖 crossbeam-channel / rust_decimal 等。axon-core 是 lib 直接
# 访问 Order / Symbol / Price / Quantity / Side / Timestamp 的依赖,显式声明避免
# 传递依赖重命名时编译失败。
axon-backtest = { workspace = true, optional = true }
axon-core = { workspace = true, optional = true }
# rust_decimal 是 axon-exchange / axon-oms 传递依赖,lib 的 f64 <-> Decimal 转换需直接访问
# 显式声明保持类型稳定(避免传递依赖重命名时编译失败)。
rust_decimal = { version = "1", features = ["serde-with-str"], optional = true }
# Stage J:axon-risk 桥接(默认禁用,trading-risk-extra feature 启用时激活)
# 包装 `axon_risk::circuit_breaker::CircuitBreaker` 为 `RiskGate`。
axon-risk = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
# rust_decimal_macros 用于 trading-oms 单测(用 dec! 宏构造 Decimal 字面量)
rust_decimal_macros = "1"
# Stage D:demo + E2E 测试中桥接 CircuitBreaker 到 RiskGate,lib 零传递依赖
axon-risk = { workspace = true }
# Stage D:demo + E2E 测试中构造 ExchangeConfig(ExchangeId / RateLimitConfig / ReconnectConfig)
axon-exchange = { workspace = true }

# 同时生成 cdylib(供 Python `import axon_llm` 使用)和 rlib(供 Rust crate 引用)
[lib]
crate-type = ["rlib", "cdylib"]

# 仅在 demo feature 启用时编译(避免 cargo test --workspace 默认编译失败)
[[example]]
name = "live_trading_demo"
required-features = ["demo"]

# 集成 demo:ReAct + 多 backend ensemble voting + explain 报告生成
[[example]]
name = "integrated_trading_demo"
required-features = ["demo"]

# Stage D 端到端 demo:LLM 工具 → RiskGate(CircuitBreaker 桥接)→ ExchangeTradingBackend → testnet。
# 依赖 demo(trading LLM backend) + trading-exchange(ExchangeTradingBackend 适配 + BinanceAdapter)
# + trading-risk-extra(Stage J `RiskPnLCircuitBreaker`,包装 `axon_risk::CircuitBreaker` 为 `RiskGate`)。
# 故意不依赖 trading-oms / trading-backtest,演示"真实交易所"主路径。
[[example]]
name = "live_trading_e2e"
required-features = ["demo", "trading-exchange", "trading-risk-extra"]
