[package]
name = "axon-oms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "订单管理系统：订单生命周期、状态机、路由、幂等性"

[dependencies]
axon-core = { path = "../axon-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

[dev-dependencies]
pretty_assertions = "1"
rust_decimal_macros = "1"
