[package]
name = "axon-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "AXON Python 统一入口：封装 axon-rl、axon-backtest 等 crate 的 Python 绑定"

[lib]
name = "_native"
# 默认仅 rlib,避免 `cargo build --workspace` 拉入 Python 工具链。
# 启用 `python` feature 时通过 maturin/setuptools-rust 构建 cdylib(参见
# pyproject.toml 与 `make python-build`),不再在 `cargo build` 阶段输出 cdylib。
crate-type = ["rlib"]

[features]
# 默认禁用以避免污染 `cargo build --workspace` 与 CI 默认构建。
# 启用方式:`cargo build -p axon-python --features python`,
# 需要 PYO3_PYTHON 指向可用 Python,且 macOS 上需正确链接 Python 库。
default = []
python = [
    "dep:pyo3",
    "dep:axon-rl",
    "dep:axon-tracker",
    "dep:axon-registry",
    "dep:axon-hpo",
    "dep:axon-walk-forward",
    "dep:axon-distributed",
    "dep:axon-llm",
    "dep:axon-data",
    # Stage 2:`axon-backtest` 暴露为 `_native.backtest` 子模块
    "dep:axon-backtest",
    # Stage 3:`axon-risk` 暴露为 `_native.risk` 子模块
    "dep:axon-risk",
    # Stage 4:`axon-oms` 暴露为 `_native.oms` 子模块
    "dep:axon-oms",
    # Stage 5:`axon-exchange` 暴露为 `_native.exchange` 子模块
    "dep:axon-exchange",
    # Stage 6:`axon-inference` 暴露为 `_native.inference` 子模块
    "dep:axon-inference",
    # `axon-explain` 暴露为 `_native.explain` 子模块
    "dep:axon-explain",
    # `axon-ensemble` 暴露为 `_native.ensemble` 子模块
    "dep:axon-ensemble",
    # `axon-compliance` 暴露为 `_native.compliance` 子模块
    "dep:axon-compliance",
    # `axon-defi` 暴露为 `_native.defi` 子模块
    "dep:axon-defi",
    # `axon-harness` + `axon-safety` 暴露为 `_native.harness` 子模块
    "dep:axon-harness",
    "dep:axon-safety",
]

[dependencies]
# 默认情况下 axon-python 仅作为聚合占位 crate,不拉入任何 Python 绑定依赖,
# 以保证 `cargo build --workspace` 在缺少 Python 工具链时也能成功。
# 启用 `python` feature 时再拉入 pyo3 与各上游 crate 的 python bindings。
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
axon-rl = { workspace = true, optional = true, features = ["python"] }
axon-tracker = { workspace = true, optional = true, features = ["python", "http"] }
axon-registry = { workspace = true, optional = true, features = ["python"] }
axon-hpo = { workspace = true, optional = true, features = ["python"] }
axon-walk-forward = { workspace = true, optional = true, features = ["python"] }
axon-distributed = { workspace = true, optional = true, features = ["python"] }
axon-llm = { workspace = true, optional = true, features = ["python", "backends"] }
# Stage 1:`axon-data` 暴露为 `_native.data` 子模块
# 显式启用 csv-source 和 parquet-source，支持 CSV/Parquet 数据加载。
axon-data = { workspace = true, optional = true, features = ["python", "csv-source", "parquet-source"] }
# Stage 2:`axon-backtest` 暴露为 `_native.backtest` 子模块
# 注:axon-backtest 的 `python` feature 是必须的,否则其子模块不会编译
axon-backtest = { workspace = true, optional = true, features = ["python"] }
# Stage 3:`axon-risk` 暴露为 `_native.risk` 子模块
# 设计约束:axon-risk 不依赖 axon-python(避免 cargo 循环),
# RiskError 继承 builtin PyException 而非 AxonError。
axon-risk = { workspace = true, optional = true, features = ["python"] }
# Stage 4:`axon-oms` 暴露为 `_native.oms` 子模块
# 设计约束:axon-oms 不依赖 axon-python(避免 cargo 循环),
# OmsError 继承 builtin PyException 而非 AxonError。
axon-oms = { workspace = true, optional = true, features = ["python"] }
# Stage 5:`axon-exchange` 暴露为 `_native.exchange` 子模块
# 设计约束:axon-exchange 不依赖 axon-python(避免 cargo 循环),
# ExchangeError 继承 builtin PyException 而非 AxonError。
# 包含 Binance / OKX 适配器 + WebSocket 监督 + 限流 + 订单生命周期。
axon-exchange = { workspace = true, optional = true, features = ["python"] }
# Stage 6:`axon-inference` 暴露为 `_native.inference` 子模块
# 设计约束:axon-inference 不依赖 axon-python(避免 cargo 循环),
# InferenceError 继承 builtin PyException 而非 AxonError。
# 包含 InferenceEngine(Onnx/Candle 后端) + BatchInferencePipeline +
# ModelHotReloader(stub)。
# 显式启用 onnx feature，确保 Python 包包含 ONNX 推理支持。
axon-inference = { workspace = true, optional = true, features = ["python", "onnx"] }
# `axon-explain` 暴露为 `_native.explain` 子模块
# 设计约束:axon-explain 不依赖 axon-python(避免 cargo 循环),
# ExplainError 继承 builtin PyException 而非 AxonError。
# 包含 KernelSHAP + CounterfactualGenerator + ReportGenerator。
axon-explain = { workspace = true, optional = true, features = ["python"] }
# `axon-ensemble` 暴露为 `_native.ensemble` 子模块
# 设计约束:axon-ensemble 不依赖 axon-python(避免 cargo 循环),
# EnsembleError 继承 builtin PyException 而非 AxonError。
# 包含 EnsembleManager + 投票策略 + StackingEnsemble + DynamicWeightedEnsemble。
axon-ensemble = { workspace = true, optional = true, features = ["python"] }
# `axon-compliance` 暴露为 `_native.compliance` 子模块
# 包含 ComplianceModule(交易记录 + 日报/月报/年报生成 + 审计完整性验证)。
axon-compliance = { workspace = true, optional = true, features = ["python"] }
# `axon-defi` 暴露为 `_native.defi` 子模块
# 包含 EvmAdapter + UniswapRouter + MevShareClient + BridgeManager。
axon-defi = { workspace = true, optional = true, features = ["python"] }
# `axon-harness` 暴露为 `_native.harness` 子模块
# 包含 HarnessBridge / Adjudication / BudgetZone / GateResult 等类型。
axon-harness = { workspace = true, optional = true }
# `axon-safety` 暴露为 `_native.harness` 子模块
# 包含 CircuitBreaker / AuditChain / PositionGuard。
axon-safety = { workspace = true, optional = true }
