[package]
name = "axon-rl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "AXON 强化学习环境：观测/动作/奖励/交易环境/Gymnasium 兼容接口（Phase 1B 阶段填充）"

[features]
default = []
# PyO3 绑定（默认禁用，启用需 python toolchain）
python = ["dep:pyo3"]

[dependencies]
axon-core = { workspace = true }
axon-backtest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Python 绑定
# pyo3 0.22 在 macOS + Python 3.13（无 freethreaded build）下导入 pymodule
# 时，会进入无 GIL 状态后调用 PyInterpreterState_Get，触发
# "Fatal Python error: PyInterpreterState_Get: GIL is released"。
# pyo3 0.23+ 改进了 Python 3.13 的 GIL 处理并改用 `prepare_freethreaded_python`，
# 这里使用 0.23 系列以保证示例能正常运行。
pyo3 = { version = "0.28", optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }

# 同时生成 cdylib（供 Python `import axon_rl` 使用）和 rlib（供 Rust crate 引用）
[lib]
crate-type = ["rlib", "cdylib"]
